2015-02-16  Per Bothner  <per@bothner.com>

	* SourceError.java (printAll): Fix logic in handling excess diagnostics.
	This fixes Savannah bug #44262 "Too many errors".
	(adjustDisplayMax, skipDisplayMessage): Remove methods.
	* SyntaxException (getMessage): Simplify to use printAll.

	* SourceError.java (appendTo): New method, works with Appendable.
	(toString, print, println): Use appendTo.
	(print, println): Generalize and simplify to Appendable.
	* SourceMessages.java (printAll, checkErrors): Likewise.

2014-12-09  Per Bothner  <per@bothner.com>

	* Char.java (checkCharOrEof): New method.

2014-08-31  Per Bothner  <per@bothner.com>

	* Makefile.am: Merge in gnu/Makefile.am.

2014-07-02  Per Bothner  <per@bothner.com>

	* Char.java (castToCharacter, castToCharacterOrEof, isCharOrEof,
	makeOrEof): New static helper methods to support character-or-eof type.

2014-06-25  Per Bothner  <per@bothner.com>

	* Char.java (class CharMap): Change to a static member class.

2014-05-26  Per Bothner  <per@bothner.com>

	* SyntaxException.java: Change to inherit from RuntimeException.

2014-03-18  Per Bothner  <per@bothner.com>

	* Path.java: Moved to gnu/kawa/io.
	* FilePath.java: Likewise.
	* URIPath.java: Likewise.
	* URLPath.java: Likewise.

2014-03-17  Per Bothner  <per@bothner.com>

	* FilePath.java (valueOf(URI)): New factory method.
	(coerceToFilePathOrNull, resolve): Use new method.

	* FilePath.java (openAppendStream): New method.

	* FilePath.java : Use toFile rather than file field directly.

2014-03-02  Per Bothner  <per@bothner.com>

	* FilePath.java (isDirectory): Use toFile to adjust for
	non-default currentPath.
	(toUri): Inline static method into non-static method.
	Add '/' is directory.
	(resolve): Use toUri before resolving relative path.

2014-02-27  Per Bothner  <per@bothner.com>

	* Path.java (userDirPath): Expand user.dir for a less confusing API.

	* Path.java (delete): Remove @Override - only valid if actually
	implementing FileObject.
